--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -1,12 +1,6 @@
 name: Default development pipeline
 
-on:
-    push:
-        branches-ignore:
-            - main
-    pull_request:
-        branches:
-            - main
+on: push
 
 env:
     NODE_VERSION: '22.14.0'
