--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -19,7 +19,7 @@ jobs:
             - name: Install dependencies
               run: npm ci
 
-            - name: Compile
+            - name: Build
               run: npm run build
 
     lint:
