--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -45,7 +45,7 @@ jobs:
                 with:
                     context: .
                     push: true
-                    tags: ${{ steps.meta.outputs.tags }}
+                    tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
                     labels: ${{ steps.meta.outputs.labels }}
 
 
@@ -70,4 +70,4 @@ jobs:
                     script: |
                         echo ${{ secrets.GITHUB_TOKEN }} | docker login ghcr.io -u ${{ github.actor }} --password-stdin
                         docker rm -f Plackarnia 1> /dev/null 2>&1
-                        docker run ${{ secrets.CONTAINER_ARGS }} ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:main
+                        docker run ${{ secrets.CONTAINER_ARGS }} ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
