--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -70,4 +70,5 @@ jobs:
                     script: |
                         echo ${{ secrets.GITHUB_TOKEN }} | docker login ghcr.io -u ${{ github.actor }} --password-stdin
                         docker rm -f Plackarnia 1> /dev/null 2>&1
+                        docker rmi ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest 1> /dev/null 2>&1
                         docker run ${{ secrets.CONTAINER_ARGS }} ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
